[package]
name = "examina_clone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "dynamic_linking",
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "hdr",
		"tonemapping_luts",
		"bevy_audio",
		"bevy_gltf",
		"bevy_gizmos",
]}
bevy_kira_audio = { version = "0.23.0", features = ["mp3"] }
bevy_rapier3d = { version = "0.30", features = ["debug-render-3d", "simd-stable"] }
once_cell = "1.21.3"
rand = "0.8"
rand_chacha = "0.3"
